[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/screenplayer/fonts/aquarius_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://data/player/animframes.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/game_state/gst_game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/streams/sounds/snd_pickup.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/streams/sounds/punch.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/streams/sounds/sword_swing.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sprites/hud/gameover.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("DeadLayer/OpacityController:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "HideText"
tracks/0/type = "value"
tracks/0/path = NodePath("DeadLayer/ContinuePrompt:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadLayer/Decisions:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeadLayer/Gameover:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DeadLayer/ContinuePrompt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeadLayer/Decisions:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeadLayer/Gameover:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DeadLayer/OpacityController:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="gst_game_over" type="Node2D"]
script = ExtResource( 3 )

[node name="ScreenCopy" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
expand = true

[node name="DeadLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Gameover" type="Sprite" parent="DeadLayer"]
position = Vector2( 160, 48 )
z_index = 1
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="DeadLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0509804, 0.160784, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ContinuePrompt" type="Label" parent="DeadLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
margin_bottom = -112.0
rect_pivot_offset = Vector2( 136, 10 )
custom_fonts/font = ExtResource( 1 )
text = " try again? "
align = 1
valign = 1

[node name="PlayerDummy" type="AnimatedSprite" parent="DeadLayer"]
position = Vector2( 160, 120 )
frames = ExtResource( 2 )
animation = "dead_h"

[node name="SwordSwingSound" type="AudioStreamPlayer" parent="DeadLayer/PlayerDummy"]
stream = ExtResource( 6 )
bus = "UnderwaterEcho"

[node name="Decisions" type="HBoxContainer" parent="DeadLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
custom_constants/separation = 64
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Accept" type="Label" parent="DeadLayer/Decisions"]
margin_left = 95.0
margin_top = 45.0
margin_right = 135.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 136, 10 )
custom_fonts/font = ExtResource( 1 )
text = "yes"
align = 1
valign = 1

[node name="Cancel" type="Label" parent="DeadLayer/Decisions"]
margin_left = 199.0
margin_top = 45.0
margin_right = 225.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 136, 10 )
custom_fonts/font = ExtResource( 1 )
text = "no"
align = 1
valign = 1

[node name="OpacityController" type="CanvasModulate" parent="DeadLayer"]
color = Color( 1, 1, 1, 0 )

[node name="ScrollSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="PickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.1
bus = "UnderwaterEcho"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 1 )
anims/HideText = SubResource( 2 )
anims/RESET = SubResource( 3 )
